--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "webscrape",
-  "version": "1.0.0",
-  "description": "",
-  "main": "scrape.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.2",
-    "cheerio": "^1.0.0-rc.3",
-    "comma-number": "^2.0.1",
-    "discord": "^0.8.2",
-    "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0",
-    "opgg-scrape": "^1.0.3",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5"
-  }
+	"name": "webscrape",
+	"version": "1.0.0",
+	"description": "",
+	"main": "scrape.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^0.19.2",
+		"comma-number": "^2.0.1",
+		"discord": "^0.8.2",
+		"discord.js": "^12.2.0",
+		"dotenv": "^8.2.0",
+		"mongoose": "^5.9.25"
+	}
 }
