--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"discord": "^0.8.2",
 		"discord.js": "^12.2.0",
 		"dotenv": "^8.2.0",
-		"mongoose": "^5.9.25"
+		"mongoose": "^5.9.25",
+		"bl": ">=2.2.1"
 	}
 }
