--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"discord.js": "^12.2.0",
 		"dotenv": "^8.2.0",
 		"mongoose": "^5.9.25",
-		"bl": ">=2.2.1"
+		"bl": ">=2.2.1",
+		"node-fetch": ">=2.6.1"
 	}
 }
